# MatchMind26

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
artifacts/: model.joblib
data/raw/: international_results.csv
data/sample/: fifa_rankings.csv  group_stage_fixtures.csv  matches.csv  qualified_teams.csv  squads.csv  team_metadata.csv  worldcup_squads_26.csv
src/wc26_predictor/: __init__.py
src/wc26_predictor/api/: main.py
src/wc26_predictor/api/web/: app.js  index.html  styles.css
src/wc26_predictor/data/: build_matches.py  loading.py
src/wc26_predictor/features/: build_features.py  elo.py  rankings.py
src/wc26_predictor/models/: __init__.py  ensemble.py  predict.py  train.py
tests/: test_api_ratings.py  test_build_matches.py  test_elo.py  test_features.py  test_knockout_scores.py  test_model.py  test_tournament_simulation.py
