[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc26-predictor"
version = "0.2.0"
description = "WC 2026 group-stage match prediction system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "xgboost>=2.0,<3.0",
]

[project.optional-dependencies]
app = [
  "fastapi>=0.110",
  "pydantic>=2.5",
  "uvicorn>=0.27",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
